Replaced new <WrapperType> with <WrapperType>.valueOf