@@ -84,7 +84,7 @@ public final class SimpleMethodModel extends SimpleMethod
     public TemplateModel get(int index) throws TemplateModelException
     {
         return (TemplateModel) exec(Collections.singletonList(
-                new SimpleNumber(new Integer(index))));
+                new SimpleNumber(Integer.valueOf(index))));
     }
 
     public int size() throws TemplateModelException {
